# redis_timeseries_manager

./: .gitignore  LICENSE  README.md  setup.cfg
examples/: _path.py  market_data.ipynb  output_formats_demonstration.ipynb  sensor_data.ipynb
src/redis_timeseries_manager/: __init__.py  redis_timeseries_manager.py
tests/: redis_timeseries_lines.ipynb  redis_timeseries_manager.ipynb
