[metadata]
name = redis_timeseries_manager
version = 2.1.3
author = Ahmad Azizi
author_email = activepost@gmail.com
description = RedisTimeseriesManager is a redis timeseries management system that enhance redis timeseries with features including multi-line data, built-in timeframes, data classifiers and convenient data accessors.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ahmadazizi/redis_timeseries_manager
project_urls =
    Bug Tracker = https://github.com/ahmadazizi/redis_timeseries_manager/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
include_package_data = True
install_requires =
    redis >=4.0
    pandas >=1

[options.packages.find]
where = src

